# crust

./: .gitignore  Cargo.toml  README.md  if  index.md  output
examples/: class.cpp  class.rs  for.cpp  func.cpp  if.cpp  if.rs  main.cpp  main.rs  prog.cpp  prog.rs  struct.cpp  struct.rs  while.cpp
first/: Cargo.toml
src/: main.rs  test.c
src/test/resources/: tokenize_comments.cpp  tokenize_ids.cpp  tokenize_keywords.cpp  tokenize_operators.cpp  tokenize_punctuations.cpp  tokenize_types.cpp  tokenize_values.cpp
test_cases/unit_tests/: class.cpp  class.rs  for.cpp  if.cpp  if.rs  output.rs  prog.cpp  prog.rs  struct.cpp  struct.rs  test_tokenize.cpp  tokenize_comments.cpp  tokenize_ids.cpp  tokenize_keywords.cpp  tokenize_operators.cpp  tokenize_punctuations.cpp  tokenize_types.cpp  tokenize_values.cpp
test_code/: output.rs  test.cpp
