[package]
name = "crust"
description = "C/C++ to Rust transpiler"
version = "0.2.0"
authors = [
    "NishanthSpShetty <nishanthspshetty@gmail.com>",
    "nikhilsaldanha <nikhilsaldanha@bitbucket.org>"
]
edition = "2018"
license-file = "LICENSE"
categories = ["compilers", "command-line-utilities"]

[dependencies]
getopts = "0.2.14"
